--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-
+baseUrl="https://api.themoviedb.org/3/"
+apiKey="23a98a93c726298f4b83358e92c8fbf9"
