--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,22 @@
         android:theme="@style/Theme.MoviesTV"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.activities.DetailsActivity"
+            android:name=".presentation.activities.SplashActivity"
             android:theme="@style/Theme.MoviesTVDeails"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".presentation.activities.DetailsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MoviesTVDeails">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -27,11 +40,6 @@
         <activity
             android:name=".presentation.activities.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
